fix to content alignment

--- a/src/modules/common/less/layout.less
+++ b/src/modules/common/less/layout.less
@@ -21,7 +21,6 @@
 		display: flex;
 		flex: auto;
 		flex-direction: column;
-		justify-content: center;
 		overflow-y: auto;
 		position: relative;
 
